examples/test/testpolicy17639.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17639
  namespace: namespace55
spec:
  podSelector:
    matchLabels:
      key10: value39
      key5: value30
      key2: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value37
          key13: value21
          key39: value8
      podSelector:
        matchLabels:
          key26: value29
